--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>dangdang-web</title>
+    <style type="text/css">
+      html,body{
+                    width: 100%;
+                   height: 100%;
+      }
+    </style>
   </head>
-  <body>
+  <body style="overflow-x:hidden;margin: 0"  >
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
