--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>dangdang-web</title>
+    <title>当当商城</title>
+    <link rel="icon" href="./static/logo.png" type="image/x-icon"/>
     <style type="text/css">
       html,body{
                     width: 100%;
